output/app-name/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-name
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: app-name
  ports:
    - name: '8080'
      port: 8080
      targetPort: 8080
